--- a/dockers/postgresql/docker-compose.yml
+++ b/dockers/postgresql/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3.1'
 
 services:
-
   db:
-    image: postgres
+    image: postgres:12.3
     restart: always
     environment:
       POSTGRES_PASSWORD: km1234km
