--- a/dockers/postgresql/docker-compose.yml
+++ b/dockers/postgresql/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: km1234km
-
+    ports:
+      - 5432:5432
   adminer:
     image: adminer
     restart: always
