Add spring-boot deploy setting

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -2,22 +2,28 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
-
     properties:
       hibernate:
         #        show_sql: true
         format_sql: true
-
-  profiles:
-    active: local
-
 logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
+---
+spring:
+  profiles:
+    active: real
+  datasource:
+    url: jdbc:postgresql://localhost:9001/postgres
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
 
 ---
 spring:
+  profiles:
+    active: local
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
