--- a/web/build.gradle
+++ b/web/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 	}
 }
 
-def querydslSrcDir = 'src/main/generated'
+def querydslSrcDir = 'build/generated/querydsl'
 
 querydsl {
 	library = "com.querydsl:querydsl-apt"
