--- a/dockers/postgresql/docker-compose.yml
+++ b/dockers/postgresql/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:12.3
     restart: always
     environment:
-      POSTGRES_USER: postgres
+      POSTGRES_USER: km
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     volumes:
